Bug 777495 - Fallback to TexImage2D if unable to allocate gralloc buffer. r=cjones